@@ -34,7 +34,7 @@
 #include "win32keyboard.h"
 #include "win32display.h"
 #include "win32internals.h"
- 
+
 /* The size of a 1x1 image in units of
    DISPLAY_ASPECT WIDTH x DISPLAY_SCREEN_HEIGHT */
 int image_scale;
@@ -47,7 +47,7 @@ int image_width, image_height;
 libspectrum_word
   win32display_image[ 2 * DISPLAY_SCREEN_HEIGHT ][ DISPLAY_SCREEN_WIDTH ];
 ptrdiff_t win32display_pitch = DISPLAY_SCREEN_WIDTH *
-                               sizeof( libspectrum_word );
+			       sizeof( libspectrum_word );
 
 /* An RGB image of the Spectrum screen; slightly bigger than the real
    screen to handle the smoothing filters which read around each pixel */
@@ -140,12 +140,12 @@ init_colours( void )
 #ifdef WORDS_BIGENDIAN
 
     win32display_colours[i] =  red << 24 | green << 16 | blue << 8;
-              bw_colours[i] = grey << 24 |  grey << 16 | grey << 8;
+	      bw_colours[i] = grey << 24 |  grey << 16 | grey << 8;
 
 #else				/* #ifdef WORDS_BIGENDIAN */
 
     win32display_colours[i] =  red | green << 8 | blue << 16;
-              bw_colours[i] = grey |  grey << 8 | grey << 16;
+	      bw_colours[i] = grey |  grey << 8 | grey << 16;
 
 #endif				/* #ifdef WORDS_BIGENDIAN */
 
@@ -165,7 +165,7 @@ uidisplay_init( int width, int height )
 //
   HRESULT ddres;
   RECT rect, rect2;
-  
+
   /* resize */
   GetClientRect( fuse_hWnd, &rect );
   rect.right = rect.left + width;
@@ -175,14 +175,14 @@ uidisplay_init( int width, int height )
   AdjustWindowRect( &rect,
     WS_OVERLAPPED|WS_CAPTION|WS_SYSMENU|WS_MINIMIZEBOX,
     FALSE );
-  MoveWindow( fuse_hWnd, rect2.left, rect2.top, 
+  MoveWindow( fuse_hWnd, rect2.left, rect2.top,
     rect.right - rect.left, rect.bottom - rect.top, TRUE );
-    
-  /* dd init */  
+
+  /* dd init */
   ddres = DirectDrawCreate(NULL, &lpdd, NULL);
   DD_ERROR( "error initializing" )
 
-  /* set cooperative level to normal */  
+  /* set cooperative level to normal */
   ddres = IDirectDraw_SetCooperativeLevel( lpdd, fuse_hWnd, DDSCL_NORMAL );
   DD_ERROR( "error setting cooperative level" )
 
@@ -191,7 +191,7 @@ uidisplay_init( int width, int height )
   ddsd.dwSize = sizeof( ddsd );
   ddsd.dwFlags = DDSD_CAPS;
   ddsd.ddsCaps.dwCaps = DDSCAPS_PRIMARYSURFACE;
-  
+
   /* attempt to create primary surface */
   ddres = IDirectDraw_CreateSurface( lpdd, &ddsd, &lpdds, NULL );
   DD_ERROR( "error creating primary surface" )
@@ -204,15 +204,15 @@ uidisplay_init( int width, int height )
   ddsd.ddsCaps.dwCaps = DDSCAPS_OFFSCREENPLAIN;
   ddsd.dwWidth = rect.right - rect.left;
   ddsd.dwHeight = rect.bottom - rect.top;
-  
+
   /* attempt to create off screen surface */
   ddres = IDirectDraw_CreateSurface( lpdd, &ddsd, &lpdds2, NULL );
   DD_ERROR( "error creating off-screen surface" )
-  
+
   /* create the clipper */
   ddres = IDirectDraw_CreateClipper( lpdd, 0, &lpddc, NULL );
   DD_ERROR( "error creating clipper" )
-  
+
   /* set the window */
   ddres = IDirectDrawClipper_SetHWnd( lpddc, 0, fuse_hWnd );
   DD_ERROR( "error setting window for the clipper" )
@@ -255,7 +255,7 @@ int gtkdisplay_configure_notify( int width )
   return 0;
 }
 
-int 
+int
 register_scalers( void )
 {
   scaler_register_clear();
@@ -268,13 +268,13 @@ register_scalers( void )
     case 1:
       scaler_register( SCALER_NORMAL );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_NORMAL );
+	scaler_select_scaler( SCALER_NORMAL );
       return 0;
     case 2:
       scaler_register( SCALER_HALF );
       scaler_register( SCALER_HALFSKIP );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_HALF );
+	scaler_select_scaler( SCALER_HALF );
       return 0;
     }
 
@@ -290,13 +290,13 @@ register_scalers( void )
       scaler_register( SCALER_SUPEREAGLE );
       scaler_register( SCALER_DOTMATRIX );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_DOUBLESIZE );
+	scaler_select_scaler( SCALER_DOUBLESIZE );
       return 0;
     case 2:
       scaler_register( SCALER_NORMAL );
       scaler_register( SCALER_TIMEXTV );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_NORMAL );
+	scaler_select_scaler( SCALER_NORMAL );
       return 0;
     }
 
@@ -307,12 +307,12 @@ register_scalers( void )
       scaler_register( SCALER_TRIPLESIZE );
       scaler_register( SCALER_ADVMAME3X );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_TRIPLESIZE );
+	scaler_select_scaler( SCALER_TRIPLESIZE );
       return 0;
     case 2:
       scaler_register( SCALER_TIMEX1_5X );
       if( !scaler_is_supported( current_scaler ) )
-        scaler_select_scaler( SCALER_TIMEX1_5X );
+	scaler_select_scaler( SCALER_TIMEX1_5X );
       return 0;
     }
 
@@ -405,16 +405,16 @@ void win32display_area(int x, int y, int width, int height)
   {
     for(disp_y=y;disp_y < y+height;disp_y++)
     {
-      pix_colour = 
-        colour_pal[3*win32display_image[disp_y][disp_x]] + 
-        colour_pal[(1+(3*win32display_image[disp_y][disp_x]))] * 256 +
-        colour_pal[(2+(3*win32display_image[disp_y][disp_x]))] * 256 * 256;
+      pix_colour =
+	colour_pal[3*win32display_image[disp_y][disp_x]] +
+	colour_pal[(1+(3*win32display_image[disp_y][disp_x]))] * 256 +
+	colour_pal[(2+(3*win32display_image[disp_y][disp_x]))] * 256 * 256;
       SetPixel( dc, disp_x, disp_y, pix_colour);
     }
   }
 
   IDirectDrawSurface_ReleaseDC( lpdds2, dc );
- return;    
+ return;
 /*
   int disp_x,disp_y;
   libspectrum_dword pix_colour;
@@ -430,10 +430,10 @@ void win32display_area(int x, int y, int width, int height)
   {
     for(disp_y=y;disp_y < y+height;disp_y++)
     {
-      pix_colour = 
-        buf[ disp_y * scaled_pitch + disp_x * 4 + 0] +
-        buf[ disp_y * scaled_pitch + disp_x * 4 + 1] * 255 +
-        buf[ disp_y * scaled_pitch + disp_x * 4 + 1] * 255 * 255;
+      pix_colour =
+	buf[ disp_y * scaled_pitch + disp_x * 4 + 0] +
+	buf[ disp_y * scaled_pitch + disp_x * 4 + 1] * 255 +
+	buf[ disp_y * scaled_pitch + disp_x * 4 + 1] * 255 * 255;
       SetPixel( dc, disp_x, disp_y, pix_colour);
     }
   }
@@ -442,7 +442,7 @@ void win32display_area(int x, int y, int width, int height)
   return;
 */
 
-}    
+}
 
 int
 uidisplay_hotswap_gfx_mode( void )
@@ -484,7 +484,7 @@ uidisplay_putpixel( int x, int y, int colour )
    colour `paper' to the screen at ( (8*x) , y ) */
 void
 uidisplay_plot8( int x, int y, libspectrum_byte data,
-                libspectrum_byte ink, libspectrum_byte paper )
+		 libspectrum_byte ink, libspectrum_byte paper )
 {
   x <<= 3;
 
@@ -526,7 +526,7 @@ uidisplay_plot8( int x, int y, libspectrum_byte data,
    colour `paper' to the screen at ( (16*x) , y ) */
 void
 uidisplay_plot16( int x, int y, libspectrum_word data,
-                 libspectrum_byte ink, libspectrum_byte paper )
+		  libspectrum_byte ink, libspectrum_byte paper )
 {
   int i;
   x <<= 4; y <<= 1;
