@@ -30,4 +30,3 @@ win32bmp_pause_inactive BITMAP "icons/pause_inactive.bmp"
 win32bmp_tape_active    BITMAP "icons/tape_active.bmp"
 win32bmp_tape_inactive  BITMAP "icons/tape_inactive.bmp"
 win32bmp_tape_marker    BITMAP "icons/tape_marker.bmp"
-
